# dotfiles

./: .gitignore  Makefile  README.md  README.org  bashrc  gitconfig  gitignore  makesymlinks.sh  packages.nix  pkglist.txt  pyproject.toml  vimrc
etc/: ergodox_ez_jtmoulia.hex  ergodox_ez_jtmoulia_yZYMd_55Lwq.hex  kwinvim.kksrc  slight-iterm2.json  toomas.terminal
guix/: Makefile  README.org  channels.scm  config.scm  mu.scm  vm.scm
guix/files/: id_rsa.pub
guix/home/: config.scm  environment.scm
guix/home/files/: zprofile.zsh  zshrc  zshrc.zsh
guix/home/files/foot/: foot.ini
guix/home/files/guile/: guile-init
guix/home/files/offlineimap/: kill-offlineimap.sh  (+2 more)
guix/home/modules/: constants.scm  emacs.scm  email.scm  git.scm  guile.scm  shell.scm  virtualization.scm  wm.scm
guix/system0/: autofs.scm  config.scm  docker.scm  pd.scm  sync.scm
guix/vm0/: config.scm
home/: .bashrc
home/.ssh/: config
layers/common/HOME/: .bash_profile  .bashrc  .gitconfig  .offlineimap.py  .offlineimaprc  .spacemacs  .tmux.conf  .vimrc
layers/common/etc/: hosts
layers/flex4/HOME/: .Xresources
layers/linux/HOME/: .conkyrc  .xinitrc  .xscreensaver
layers/thinkpadx1/HOME/: .Xmodmap  .Xresources
playbooks/: base.yml  cli.yml  cog.yml  hab.yml  lenovo-flex-4.yml  lenovo-t480.yml  lenovo-yoga.yml  main.yml  osx.yml  sam.yml  t480.yml
playbooks/roles/dotsible/: README.md
playbooks/roles/emacs/: .gitignore
playbooks/roles/nextcloud/: README.md
playbooks/roles/offlineimap/: README.org
playbooks/roles/stumpwm/: README.md
playbooks/roles/syshealth/: README.md
(+203 files in other folders)
