[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "jtmoulia's dotfiles"
authors = ["Thomas Moulia <jtmoulia@pocketknife.io>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"
jinja2 = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
